--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
   }
 </style>
 </head>
-<body>
+<bodym onclick="window.open('https://otieu.com/4/9702485')">
 
-  <div class="container" id="container" onclick="window.open('https://www.profitableratecpm.com/fret6u3je1?key=80dd42d209bdd78cd1f34aa3feeac129', '_blank')">
+  <div class="container" id="container" onclick="window.open('https://otieu.com/4/9702485')">
   
     <h1>৫০ জন বন্ধুর কাছে শেয়ার করুন, ১০ জিবি ইন্টারনেট নিন!</h1>
     <p>মোবাইল নাম্বার দিন, শেয়ার শুরু করুন, এবং আপনার রেফারেল প্রগ্রেস দেখুন।</p>
